cmake_minimum_required(VERSION 3.10)
project(SOLID)

set(CMAKE_CXX_STANDARD 20)
#add_subdirectory(plant-care)

#add_executable(main main.cpp)


#add_executable(ocp OCP/ocp_with_inheritance_and_polymorphism.cpp)
#add_executable(ocp OCP/ocp_using_templates.cpp)
#add_executable(ocp OCP/ocp_using_template_specilation.cpp)
#add_executable(ocp OCP/ocp_using_cpp_concept.cpp )
#add_executable(ocp OCP/ocp_using_decorator_pattern.cpp )
#add_executable(ocp OCP/ocp_using_decorator_static.cpp)
#add_executable(ocp OCP/ocp_using_template_method.cpp)
#add_executable(ocp OCP/ocp_using_composition_over_inheritance.cpp)
#add_executable(ocp OCP/ocp_using_runtime_concet.cpp)
#add_executable(lsp LSP/lsp_classic_example.cpp)
add_executable(lsp LSP/lsp_better_example.cpp)